# fitbot

./: .env.example  .env.secrets.example  .gitignore  .travis.yml  Dockerfile  Dockerfile.test  Makefile  README.md  aimharderservice.py  client.py  constants.py  docker-compose.yml  main.py  pyproject.toml  requirements-tests.txt  requirements.txt  settings.py  settingscheck.py
.github/workflows/: build.yml  docker-build-and-publish.yml  docker_registry.yml  run-code.yml  scheduled.yml  test.yml
src/: aimharderservice.py  booking-goals.yml  booking_goals.py  client.py  constants.py  exceptions.py  logger.py  main.py  settings.py  settingscheck.py
src/tests/: test_booking_goals.py  test_client.py  test_main.py
