[project]
name = "fitbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "pysocks>=1.7.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.1",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
